Fixed spacing issue in menus

--- a/UniversityCollege_cssCleanup/scss/_navigation.scss
+++ b/UniversityCollege_cssCleanup/scss/_navigation.scss
@@ -1,4 +1,4 @@
-/** 
+/**
  * -------------------------------------------
  * Navigation CSS
  * -------------------------------------------
@@ -88,8 +88,7 @@
 	.rmItem{
 		ul.rmLevel2, ul.rmLevel3{
 			border: 1px solid #7d110c;
-			margin-left: 25px;
-			margin-top: -46px;
+			margin: -6px 0 0 25px;
 			padding-top: 5px;
 		}
 		a{
